prevent image overflow for selected content element

--- a/core-bundle/src/Resources/contao/themes/flexible/main.css
+++ b/core-bundle/src/Resources/contao/themes/flexible/main.css
@@ -1029,7 +1029,7 @@ table.tl_listing {
 .tl_content h1,.tl_content h2,.tl_content h3,.tl_content h4,.tl_content h5,.tl_content h6 {
 	font-size:.875rem;
 }
-.tl_content img {
+.tl_content img, .selector_container img {
 	max-width:320px;
 	height:auto;
 }
